<resources>
    <!-- Generic -->
    <string name="app_name">Trym</string>
    <string name="menu">Menu</string>
    <string name="facebook_app_id">888263191295909</string>

    <!-- Login -->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="fb_login_protocol_scheme">fb888263191295909</string>

    <!-- Sidebar -->
    <string name="home">Home</string>
    <string name="messages">Messages</string>
    <string name="nearby">Nearby Trainers</string>
    <string name="apply">Apply to Train</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
