<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorLogin"
    tools:context="com.nisnevich.jacob.trym.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginBottom="20dp">
            <TextView
                android:id="@+id/login_switch"
                android:background="@color/loginActive"
                android:textColor="#EEE"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="20sp"
                android:gravity="center"
                android:clickable="true"
                android:textAllCaps="true"
                android:text="@string/login"
                android:onClick="onLoginSwitchClick"/>
            <TextView
                android:id="@+id/register_switch"
                android:background="@color/loginInactive"
                android:textColor="#EEE"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="20sp"
                android:gravity="center"
                android:clickable="true"
                android:textAllCaps="true"
                android:text="@string/register"
                android:onClick="onRegisterSwitchClick"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/register_fields"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:visibility="gone"
                android:weightSum="2">
                <EditText
                    android:id="@+id/first_name_field"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:inputType="textPersonName"
                    android:textColor="#EEE"
                    android:textColorHint="#EEE"
                    android:backgroundTint="#EEE"
                    android:hint="@string/first_name"/>
                <EditText
                    android:id="@+id/last_name_field"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:inputType="textPersonName"
                    android:textColor="#EEE"
                    android:textColorHint="#EEE"
                    android:backgroundTint="#EEE"
                    android:hint="@string/last_name"/>
            </LinearLayout>

            <EditText
                android:id="@+id/email_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:inputType="textEmailAddress"
                android:textColor="#EEE"
                android:textColorHint="#EEE"
                android:backgroundTint="#EEE"
                android:hint="@string/email"/>

            <EditText
                android:id="@+id/password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:inputType="textPassword"
                android:textColor="#EEE"
                android:textColorHint="#EEE"
                android:backgroundTint="#EEE"
                android:hint="@string/password"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp">
                <Button
                    android:id="@+id/login_button"
                    android:visibility="visible"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/login"/>
                <Button
                    android:id="@+id/register_button"
                    android:visibility="gone"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/register"/>
            </LinearLayout>

            <com.facebook.login.widget.LoginButton
                android:id="@+id/fb_login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
